fix:[#3299] overflow accordion fix
Closes #3299

--- a/app/assets/stylesheets/_bootstrap-customizations.scss
+++ b/app/assets/stylesheets/_bootstrap-customizations.scss
@@ -7775,6 +7775,15 @@ abbr[title] {
   }
 }
 
+.new-service,
+.edit-service {
+  .accordion {
+    .card {
+      overflow: visible;
+    }
+  }
+}
+
 // scss-lint:enable all
 
 .subpage-title {
